<resources>
    <string name="app_name">BasicPhrases</string>
    <string name="hello">Hello</string>
    <string name="glad_to_meet_you">Glad to meet you</string>
    <string name="speak_english">Do you speak English?</string>
    <string name="goodbye">Goodbye!</string>
    <string name="how_are_you_man">How are you? (man)</string>
    <string name="how_are_you_woman">How are you? (woman)</string>
    <string name="my_name_is">My name is...</string>
    <string name="thank_you">Thank you!</string>
</resources>
