<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.will.basicphrases.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/hello"
                    android:id="@+id/hello"
                    android:layout_gravity="center"
                    android:onClick="playPhrase" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/glad_to_meet_you"
                    android:id="@+id/glad_to_meet_you"
                    android:layout_gravity="center"
                    android:onClick="playPhrase" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/how_are_you_man"
                    android:id="@+id/how_are_you_man"
                    android:layout_gravity="center"
                    android:onClick="playPhrase" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/how_are_you_woman"
                    android:id="@+id/how_are_you_woman"
                    android:layout_gravity="center"
                    android:onClick="playPhrase" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/speak_english"
                    android:id="@+id/do_you_speak_english"
                    android:layout_gravity="center"
                    android:onClick="playPhrase" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/my_name_is"
                    android:id="@+id/my_name_is"
                    android:layout_gravity="center"
                    android:onClick="playPhrase"
                    android:tag="5" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/thank_you"
                    android:id="@+id/thank_you"
                    android:layout_gravity="center"
                    android:onClick="playPhrase"
                    android:tag="6" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/goodbye"
                    android:id="@+id/goodbye"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:onClick="playPhrase"
                    android:tag="7" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
